ReporteRs 0.8.4
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* package rvg support raster function.

DEBUG
------------------------------------------------------------------

* Graphics Devices have been dropped, package rvg is now producing
  the graphics. It solves issue #91.

ReporteRs 0.8.3
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* new mathjax option fo bsdoc objects (proposed by David Hajage)

ReporteRs 0.8.2
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* new function as.HTML for bsdoc objects. It return the raw HTML of
  a bsdoc document. (suggested by Tyler Beason)

* new functions to let make the plot interactive when graphical
  device is 'raphael'.

* function raphael.html now returns a list with javascript instructions,
  HTML code and id values.

DEBUG
------------------------------------------------------------------

* fix an encoding issue in pptx with bullets (reported by Jonathan
  Oxborrow)

* fix an issue with NA values in FlexTable (reported by Vadim
  Bondarenko)

* the package is now configured so that headless mode is always true.

ReporteRs 0.8.1
==================================================================

ENHANCEMENT
------------------------------------------------------------------

* add CodeBlock for vertabim output

* add pot_img function to add inline images to pot objects

DEBUG
------------------------------------------------------------------

* docx FlexTable headers were not repeated along pages.


ReporteRs 0.8.0
==================================================================

ENHANCEMENT
------------------------------------------------------------------
