@@ -5,6 +5,7 @@ ENHANCEMENT
 ------------------------------------------------------------------
 
 * package rvg support raster function.
+* let Word TOC display from one to nine level of titles
 
 DEBUG
 ------------------------------------------------------------------
